Fixed fit to width on phones still having a horizontal scrollbar

--- a/UI/Web/src/_manga-reader-common.scss
+++ b/UI/Web/src/_manga-reader-common.scss
@@ -7,7 +7,6 @@ img {
   align-items: center;
 
   &.full-width {
-    width: 100vw;
     height: calc(var(--vh)*100);
     display: grid;
   }
